<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.ase.proiect.util.RegisterActivity">

    <ImageView
        android:id="@+id/reg_ImageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/reg_Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409"
        app:srcCompat="@drawable/adduser" />

    <EditText
        android:id="@+id/reg_Username"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/reg_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/reg_Email"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <EditText
        android:background="@drawable/reg_edittext_style"
        android:id="@+id/reg_Password"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_registry"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_Email" />

    <EditText
        android:background="@drawable/reg_edittext_style"
        android:id="@+id/reg_Password2"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_Password" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="130dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/reg_btn_style"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_Password2"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/reg_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/reg_button"
        app:layout_constraintEnd_toEndOf="@+id/reg_button"
        app:layout_constraintStart_toStartOf="@+id/reg_button"
        app:layout_constraintTop_toTopOf="@+id/reg_button"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/reg_spinner"
        android:layout_width="103dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="61dp"
        android:entries="@array/Sex"
        app:layout_constraintBottom_toTopOf="@+id/reg_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_Password2" />

</androidx.constraintlayout.widget.ConstraintLayout>